sanger/sites/gutcellatlas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gut-cell-atlas
spec:
  selector:
    matchLabels:
      app: gut-cell-atlas
  replicas: 1
  template:
    metadata: 
      name: gut-cell-atlas
      labels:
        app: gut-cell-atlas
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: gut-cell-atlas
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/gutcellatlas/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gut-cell-atlas-tcr-bcr
spec:
  selector:
    matchLabels:
      app: gut-cell-atlas-tcr-bcr
  replicas: 1
  template:
    metadata: 
      name: gut-cell-atlas-tcr-bcr
      labels:
        app: gut-cell-atlas-tcr-bcr
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gut-cell-atlas-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.11.0
        imagePullPolicy: IfNotPresent
        name: gut-cell-atlas-tcr-bcr
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/Colon_cell_atlas.h5ad", "-t", "TCR BCR 700 genes", "--host", "0.0.0.0", "--port", "5005"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "5Gi"
            cpu: 1
---
