sanger/sites/gutcellatlas/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: gutcellatlas-backend
spec:
  virtualhost:
    fqdn: gutcellatlas-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: gut-cell-atlas
          port: 80
    - match: /static
      services:
        - name: gut-cell-atlas-tcr-bcr
          port: 80
    - match: /tcr-bcr
      enableWebsockets: true
      prefixRewrite: "/" 
      services:        
        - name: gut-cell-atlas-tcr-bcr
          port: 80
    - match: /fetal
      enableWebsockets: true
      prefixRewrite: "/" 
      services:        
        - name: gut-cell-atlas-fetal
          port: 80
    - match: /paediatric
      enableWebsockets: true
      prefixRewrite: "/" 
      services:        
        - name: gut-cell-atlas-paediatric
          port: 80
---
